fix additional white space bug

--- a/dupe.css
+++ b/dupe.css
@@ -45,7 +45,7 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
 body{
 	margin:0px;
 	padding:0px;
-	min-height:101%;
+	height:100%;
 	}
 
 div{
@@ -104,7 +104,7 @@ nav a{
   background-image: url('graphics/artactportrait-centered.jpg');
   background-size: cover;
   overflow: hidden;
-  height: 728px;
+  height: 725px;
   padding: 0px;
   margin-right: auto;
   margin-left: auto;
@@ -170,7 +170,7 @@ nav a{
 
 .night{
   width: 100%;
-  height: 700px;
+  height: 750px;
   margin-right: auto;
   margin-left: auto;
   background-color: black;
@@ -359,7 +359,7 @@ p{
   }
 
 .authors{
-  height: 720px;
+  height: 750px;
   width: 100%;
   background-image: url('graphics/canvas.jpg');
   overflow: hidden;
